--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <body>
@@ -33,7 +34,7 @@
 </section>
         </main>
         <footer>
-            <p>projeto desenvolvido por Abner, sem fins lucrativos</p>
+            <p>Projeto desenvolvido por Abner, sem fins lucrativos</p>
         </footer>
     </body>
 </body>
