--- a/index.html
+++ b/index.html
@@ -1,41 +1,31 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcard</title>
     <link rel="stylesheet" href="style.css">
+    <title>Flashcard</title>
 </head>
 <body>
-    <body>
-        <main>
-<section id="container">
-    <article class="cartao">
-        <div class="cartao_conteudo"> </div>
-        <h3>Programção</h3>
-        <div class="cartao_conteudo_pergunta ">
-            O que é JavaScript?
-        </div>
-        <div class="cartao_conteudo_resposta">
-        JavaScript é uma linguagem de programação 
-        </div>
-    </article>
-    <article class="cartao">
-        <div class="cartao_conteudo"> </div>
-        <h3>Programção</h3>
-        <div class="cartao_conteudo_pergunta ">
-            O que é CSS?
-        </div>
-        <div class="cartao_conteudo_resposta">
-        O CSS é uma linguagem e estilização.
-        </div>
-    </article>
-</section>
-        </main>
-        <footer>
-            <p>Projeto desenvolvido por Abner, sem fins lucrativos</p>
-        </footer>
-    </body>
+    <main>
+        <section id="container">
+            <!-- <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é JavaScript?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>O JavaScript é uma linguagem de programação</p>
+                    </div>
+                </div>
+            </article> -->
+        </section>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+    </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
